--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   background-color: gold;
   display: inline;
 }
+
+/*------------- Nav Bar Style ---------------------------*/
+
+
 li a {
   display: block;
   padding: 10px 20px;
